// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entity snapshot is correct 1`] = `
Object {
  "date": Object {
    "created": Any<Date>,
  },
  "id": 0,
  "sources": Array [
    0,
  ],
  "type": 0,
  "userName": "Bob",
}
`;

exports[`Entity snapshot is correct 2`] = `
Object {
  "date": Object {
    "created": Any<Date>,
  },
  "id": 1,
  "sources": Array [
    0,
  ],
  "type": 0,
  "userName": "Sue",
}
`;

exports[`Entity snapshot is correct 3`] = `
Object {
  "date": Object {
    "created": Any<Date>,
  },
  "id": 2,
  "parentId": 1,
  "sources": Array [
    0,
  ],
  "text": "Hello, sue.",
  "type": 0,
}
`;
